<resources>
    <string name="app_name">Net Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="setup_your_account">Setup Your Account</string>
    <string name="input_balance">Input Your Balance</string>
    <string name="logout">Logout</string>

    <string-array name="account_type">
        <item>Cash</item>
        <item>Bank Account</item>
    </string-array>

    <string-array name="currency">
        <item>Indonesian Rupiah (IDR)</item>
        <item>Euro (Eur)</item>
        <item>US Dollar (USD)</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="input_value">Input Value of Transaction</string>
    <string name="detail_transaction">Detail Transaction (Food, Etc)</string>
    <string name="input_transaction">Input Your Transaction</string>
    <string name="account_summary">Account Summary</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="input_bank_account">Input Bank Account Name</string>
    <string name="current_balance">Current Balance</string>
    <string name="add_new_account">Add New Account</string>
    <string name="select_account">Select Account</string>

    <string-array name="transaction_type">
        <item>Income</item>
        <item>Expenses</item>
    </string-array>

    <string name="channel_name">Channel Name</string>
    <string name="channel_description">This is sample notification</string>
    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting_header">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="date_reminder">Set Date (dd/MM/yyyy)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="last_seven_days">Last Seven Days</string>
    <string name="last_thirty_days">Last 30 Days</string>
    <string name="custom">Custom Filter</string>
    <string name="back_to_graph">Back To Graph</string>
    <string name="see_details">See Details</string>
    <string name="set_monthly_transaction">Set Monthly Transaction</string>
    <string name="set_monthly">Set Monthly Transaction</string>
    <string name="et_date">Scheduled At (Date every Month) </string>
    <string name="btn_set">Set</string>
    <string name="btn_set_reminder">Set Reminder</string>
    <string name="dialog">Do you want to cancel this reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>

