<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/today"
            android:textColor="@color/button_active"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart" />

        <TextView
            android:id="@+id/tvLastSevenDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/last_seven_days"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvToday"
            app:layout_constraintStart_toEndOf="@+id/tvToday" />

        <TextView
            android:id="@+id/tvLastThirtyDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/last_thirty_days"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLastSevenDays"
            app:layout_constraintStart_toEndOf="@+id/tvLastSevenDays" />

        <TextView
            android:id="@+id/tvCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/custom"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLastThirtyDays"
            app:layout_constraintStart_toEndOf="@+id/tvLastThirtyDays" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>